# light-rpc

./: Cargo.toml
bench-utils/: Cargo.toml
benches/: tps.rs
lite-client/: Cargo.toml
src/: bridge.rs  client.rs  lib.rs  main.rs  rpc.rs  worker.rs
src/workers/: mod.rs  tx_sender.rs
tests/: bridge.rs  workers.rs
