[package]
name = "light-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = { git = "https://github.com/blockworks-foundation/solana.git" }
solana-sdk = { git = "https://github.com/blockworks-foundation/solana.git" } 
solana-version = { git = "https://github.com/blockworks-foundation/solana.git" } 
solana-transaction-status = { git = "https://github.com/blockworks-foundation/solana.git" } 
actix-web = "4.2.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.14.1", features = ["full"]} 
bincode = "1.3.3"
bs58 = "0.4.0"
base64 = "0.13.0"
thiserror = "1.0.37"
futures = "0.3.24"
bytes = "1.3.0"
reqwest = "0.11.13"
anyhow = "1.0.66"

[dev-dependencies]
csv = "1.1.6"

[[bench]]
name="tps"
harness=false
